# Projects

./: .gitignore  README.md  main.py  pyproject.toml
VibeForge/: README.md  main.py
VibeForge/src/: create_documents.py  find_similar_issues.py  github_client.py  llm_issue_analyzer.py  llm_related_issues.py  process_issues.py  vector_db.py
src/: embeddings.py  github_client.py  llm_duplicate_analyzer.py  llm_issue_analyzer.py  process_issues.py
