[project]
name = "vibeforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=6.20.0",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.9",
    "langchain-huggingface>=1.2.2",
    "openai>=2.46.0",
    "requests>=2.34.2",
    "sentence-transformers>=5.6.0",
]
